infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: new.com
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/crew/?(.*)
            pathType: Prefix
            backend:
              service:
                name: crew-srv
                port:
                  number: 3000
          - path: /api/roles/?(.*)
            pathType: Prefix
            backend:
              service:
                name: roles-srv
                port:
                  number: 3000
          - path: /api/units/?(.*)
            pathType: Prefix
            backend:
              service:
                name: units-srv
                port:
                  number: 3000
          - path: /api/rates/?(.*)
            pathType: Prefix
            backend:
              service:
                name: rates-srv
                port:
                  number: 3000
          - path: /api/shifts/?(.*)
            pathType: Prefix
            backend:
              service:
                name: shifts-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
